# sep-cuda

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
cmake/: SEPCUDAConfig.cmake.in
examples/cxx/: main.cpp
examples/minimal/: CMakeLists.txt
examples/python/: demo.py
python/: sep_cuda.py
src/: background.cpp  cuda_background.cu  profiling.cpp  sep_cuda.h  sep_cuda_addon.h  sep_internal.h  sepcore.h  u16_pipeline.cpp  util.cpp
tests/: profile_background.cpp  test_compare.cpp  test_python_background.py  test_smoke.cpp  test_u16_pipeline.cpp
